--- a/Pytest.ini
+++ b/Pytest.ini
@@ -7,3 +7,5 @@ markers =
     Negative: This tag should be used for Negative test case scenarios
     E2E: end to end testing request chaining
     BAU: Current test removed this tag after running test and before pushing to git
+    API: This tag should be used for API test cases
+    GUI: This tag should be used for API test cases
